--- a/packages/info_pl/example/android/app/src/main/AndroidManifest.xml
+++ b/packages/info_pl/example/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
-        tools:ignore="ProtectedPermissions" />
-    <uses-permission
-        android:name="android.permission.READ_PHONE_STATE"/>
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:label="info_pl_example"
