--- a/packages/info_pl/pubspec.yaml
+++ b/packages/info_pl/pubspec.yaml
@@ -1,12 +1,15 @@
 name: info_pl
-description: Flutter project that retrieves a device's information.
-version: 0.0.2
+description: This Flutter plugin offers detailed information about the device's hardware, 
+  operating system, phone model, platform version the app is running on, and more.
+version: 0.0.3
 repository: https://github.com/fadimanakilci/pl_plugins/tree/main/packages/info_pl
-issue_tracker: https://github.com/fadimanakilci/pl_plugins/labels/info_pl
+#issue_tracker: https://github.com/fadimanakilci/pl_plugins/labels/info_pl
+
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
   flutter: '>=3.3.0'
+
 
 dependencies:
   flutter:
@@ -16,26 +19,14 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   logging: ^1.2.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
-  # which should be registered in the plugin registry. This is required for
-  # using method channels.
-  # The Android 'package' specifies package in which the registered class is.
-  # This is required for using method channels on Android.
-  # The 'ffiPlugin' specifies that native code should be built and bundled.
-  # This is required for using `dart:ffi`.
-  # All these are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
     platforms:
       android:
@@ -53,33 +44,3 @@ flutter:
         pluginClass: InfoPlWeb
         fileName: info_pl_web.dart
 
-  # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
